--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>Boolzap</title>
 </head>
 <body>
-    
 
+    <div class="background">
+        <div class="background__header"></div>
+        <div class="background__body"></div>
+    </div>
 
 
 
