--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/media-queries.css">
     <title>Boolzap</title>
 </head>
 <body>
@@ -14,7 +15,16 @@
         <div class="background__body"></div>
     </div>
 
+    <main>
+        <div class="app-wrapper">
+            <div class="sidebar">
 
+            </div>
+            <div class="conversation-panel">
+                
+            </div>
+        </div>
+    </main>
 
     <script src="js/app.js"></script>
 </body>
