--- a/index.html
+++ b/index.html
@@ -41,9 +41,150 @@
                             Ricevi notifiche di nuovi messaggi
                         </div>
                         <div class="sidebar-banner__text">
-                            Attiva notifiche desktop <i class="fas fa-angle-right"></i>
+                           <a href="#"> Attiva notifiche desktop <i class="fas fa-angle-right"></i></a>
                         </div>
                     </div>
+                </div>
+                <div class="sidear-contacts">
+                    <div class="sidebar-contancts__search">
+                        <input id="contact-research" type="text" placeholder="Cerca o inizia una nuova chat">
+                        <div class="sidear-contacts__search-icon">
+                            <i class="fas fa-search"></i>
+                        </div>
+                    </div>
+                    <ul class="sidebar-contacts__list">
+                        <li class="sidebar-contacts__contact">
+                            <div class="contact__avatar">
+                                <img src="img/avatar-01.png" alt="">
+                            </div>
+                            <div class="contact__text">
+                                <div class="contact__name">Vincenzo</div>
+                                <div class="contact__last-message">Ciao.</div>
+                            </div>
+                            <div class="contact__time">11:27</div>
+                        </li>
+                        <li class="sidebar-contacts__contact">
+                            <div class="contact__avatar">
+                                <img src="img/avatar-01.png" alt="">
+                            </div>
+                            <div class="contact__text">
+                                <div class="contact__name">Vincenzo</div>
+                                <div class="contact__last-message">Ciao.</div>
+                            </div>
+                            <div class="contact__time">11:27</div>
+                        </li>
+                        <li class="sidebar-contacts__contact">
+                            <div class="contact__avatar">
+                                <img src="img/avatar-01.png" alt="">
+                            </div>
+                            <div class="contact__text">
+                                <div class="contact__name">Vincenzo</div>
+                                <div class="contact__last-message">Ciao.</div>
+                            </div>
+                            <div class="contact__time">11:27</div>
+                        </li>
+                        <li class="sidebar-contacts__contact">
+                            <div class="contact__avatar">
+                                <img src="img/avatar-01.png" alt="">
+                            </div>
+                            <div class="contact__text">
+                                <div class="contact__name">Vincenzo</div>
+                                <div class="contact__last-message">Ciao.</div>
+                            </div>
+                            <div class="contact__time">11:27</div>
+                        </li>
+                        <li class="sidebar-contacts__contact">
+                            <div class="contact__avatar">
+                                <img src="img/avatar-01.png" alt="">
+                            </div>
+                            <div class="contact__text">
+                                <div class="contact__name">Vincenzo</div>
+                                <div class="contact__last-message">Ciao.</div>
+                            </div>
+                            <div class="contact__time">11:27</div>
+                        </li>
+                        <li class="sidebar-contacts__contact">
+                            <div class="contact__avatar">
+                                <img src="img/avatar-01.png" alt="">
+                            </div>
+                            <div class="contact__text">
+                                <div class="contact__name">Vincenzo</div>
+                                <div class="contact__last-message">Ciao.</div>
+                            </div>
+                            <div class="contact__time">11:27</div>
+                        </li>
+                        <li class="sidebar-contacts__contact">
+                            <div class="contact__avatar">
+                                <img src="img/avatar-01.png" alt="">
+                            </div>
+                            <div class="contact__text">
+                                <div class="contact__name">Vincenzo</div>
+                                <div class="contact__last-message">Ciao.</div>
+                            </div>
+                            <div class="contact__time">11:27</div>
+                        </li>
+                        <li class="sidebar-contacts__contact">
+                            <div class="contact__avatar">
+                                <img src="img/avatar-01.png" alt="">
+                            </div>
+                            <div class="contact__text">
+                                <div class="contact__name">Vincenzo</div>
+                                <div class="contact__last-message">Ciao.</div>
+                            </div>
+                            <div class="contact__time">11:27</div>
+                        </li>
+                        <li class="sidebar-contacts__contact">
+                            <div class="contact__avatar">
+                                <img src="img/avatar-01.png" alt="">
+                            </div>
+                            <div class="contact__text">
+                                <div class="contact__name">Vincenzo</div>
+                                <div class="contact__last-message">Ciao.</div>
+                            </div>
+                            <div class="contact__time">11:27</div>
+                        </li>
+                        <li class="sidebar-contacts__contact">
+                            <div class="contact__avatar">
+                                <img src="img/avatar-01.png" alt="">
+                            </div>
+                            <div class="contact__text">
+                                <div class="contact__name">Vincenzo</div>
+                                <div class="contact__last-message">Ciao.</div>
+                            </div>
+                            <div class="contact__time">11:27</div>
+                        </li>
+                        <li class="sidebar-contacts__contact">
+                            <div class="contact__avatar">
+                                <img src="img/avatar-01.png" alt="">
+                            </div>
+                            <div class="contact__text">
+                                <div class="contact__name">Vincenzo</div>
+                                <div class="contact__last-message">Ciao.</div>
+                            </div>
+                            <div class="contact__time">11:27</div>
+                        </li>
+                        <li class="sidebar-contacts__contact">
+                            <div class="contact__avatar">
+                                <img src="img/avatar-01.png" alt="">
+                            </div>
+                            <div class="contact__text">
+                                <div class="contact__name">Vincenzo</div>
+                                <div class="contact__last-message">Ciao.</div>
+                            </div>
+                            <div class="contact__time">11:27</div>
+                        </li>
+                        <li class="sidebar-contacts__contact">
+                            <div class="contact__avatar">
+                                <img src="img/avatar-01.png" alt="">
+                            </div>
+                            <div class="contact__text">
+                                <div class="contact__name">Vincenzo</div>
+                                <div class="contact__last-message">Ciao.</div>
+                            </div>
+                            <div class="contact__time">11:27</div>
+                        </li>
+                        
+                    </ul>
                 </div>
             </div>
             <div class="conversation-panel">
